--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,10 @@ Pillow==8.2.0
 gunicorn
 blinker==1.8.1
 click==8.1.7
-importlib-metadata=7.1.0
-itsdangerous=2.2.0
+importlib-metadata==7.1.0
+itsdangerous==2.2.0
 Jinja2==3.1.3
-MarkupSafe=2.1.5
+MarkupSafe==2.1.5
 werkzeug==3.0.2
-zipp=3.18.1
+zipp==3.18.1
 
